# 1000genome-workflow

./: .gitignore  3-1000-genomes.ipynb  README.md  gc-workflow.py  plot.py  pyproject.toml  run.py
data/20130502/sifting/: README.md
genomes/: frequency.py  individuals.py  individuals_merge.py  individuals_merge_mpi.py  individuals_mpi.py  mutation_overlap.py  sifting.py  utils.py
