[project]
name = "genomes"
description = "1000genomes with Globus Compute"
version = "0.0.1a"
authors = [
    { name = "Valerie Hayot-Sasson", email = "vhayot@uchicago.edu"    },
]
dependencies = [
    "proxystore[redis]",
    "globus-compute-sdk",
    "globus-compute-endpoint",
    "numpy",
    "matplotlib",
    "pandas",
    "dask[distributed]",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs*", "data*", "analysis*"]

[tool.ruff]
extend-select = ["Q"]
