[project]
name = "genomes"
description = "1000 Genomes workflow with Globus Compute"
version = "0.0.1"
authors = [
    { name = "Valerie Hayot-Sasson", email = "vhayot@uchicago.edu" },
    { name = "Greg Pauloski", email = "jgpauloski@uchicago.edu" },
]
dependencies = [
    "proxystore[redis]==0.6.4",
    "globus-compute-sdk==2.17.0",
    "globus-compute-endpoint==2.17.0",
    "numpy",
    "matplotlib",
    "pandas==2.2.1",
    # Visualization
    "jupyterlab==3.6.7",
    "kaleido==0.2.1",
    "plotly==5.19.0",
    "polars==0.20.13",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs*", "data*", "analysis*"]

[tool.ruff.lint]
extend-select = ["Q"]
